--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: beastsandbytes/channel-site
   branch: main
+  base_url: https://beasts-and-bytes-00.netlify.app
+  auth_endpoint: /api/auth
 
 media_folder: "assets/uploads"
 public_folder: "/assets/uploads"
